[gd_scene load_steps=16 format=3 uid="uid://c7261ypnucte8"]

[ext_resource type="Script" uid="uid://d1r30dgeh6o0l" path="res://core/screens/level_select/level_select_screen.gd" id="1_nn3bt"]
[ext_resource type="Theme" uid="uid://jcpo8pxbskbt" path="res://core/screens/level_select/theme/level_select_theme.tres" id="1_y5cmv"]
[ext_resource type="Script" uid="uid://couw105c3bde4" path="res://addons/godot_state_charts/state_chart.gd" id="2_gkkbi"]
[ext_resource type="Script" uid="uid://jk2jm1g6q853" path="res://addons/godot_state_charts/compound_state.gd" id="3_1tjgp"]
[ext_resource type="Script" uid="uid://cytafq8i1y8qm" path="res://addons/godot_state_charts/atomic_state.gd" id="4_2y2ge"]
[ext_resource type="Script" uid="uid://cf1nsco3w0mf6" path="res://addons/godot_state_charts/transition.gd" id="5_fmwaj"]
[ext_resource type="Script" uid="uid://c1vp0ojjvaby1" path="res://addons/godot_state_charts/parallel_state.gd" id="8_4va4l"]
[ext_resource type="Script" uid="uid://ban35fvtbwsus" path="res://core/screens/level_select/level_select_overlay.gd" id="12_1xipj"]
[ext_resource type="Texture2D" uid="uid://dpqnh6g4wvxda" path="res://core/screens/level_select/graphics/icons/up_topic_icon.svg" id="12_nortw"]
[ext_resource type="Texture2D" uid="uid://dgsvufp81n7po" path="res://core/globals/graphics/button_icons/menu_icon.svg" id="13_6jxcg"]
[ext_resource type="PackedScene" uid="uid://dl36mi4jimfwi" path="res://core/screens/level_select/topic_map_container.tscn" id="13_nortw"]
[ext_resource type="Texture2D" uid="uid://ded0xkqasjno6" path="res://core/globals/graphics/button_icons/settings_icon.svg" id="14_54uqb"]
[ext_resource type="Texture2D" uid="uid://buh4qiqae3638" path="res://core/globals/graphics/button_icons/home_icon.svg" id="15_fdq5g"]
[ext_resource type="LabelSettings" uid="uid://dlq20dg1uqekf" path="res://core/screens/level_select/panel_header_label_settings.tres" id="16_x8a3b"]
[ext_resource type="Theme" uid="uid://6u5y2olmcrbm" path="res://core/globals/theme/main_theme.tres" id="17_yooek"]

[node name="LevelSelectScreen" type="Node"]
script = ExtResource("1_nn3bt")

[node name="StateChart" type="Node" parent="."]
script = ExtResource("2_gkkbi")
initial_expression_properties = {
&"zoom_duration": 1.0
}
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="Camera" type="Node" parent="StateChart"]
script = ExtResource("3_1tjgp")
initial_state = NodePath("Starting")

[node name="Starting" type="Node" parent="StateChart/Camera"]
script = ExtResource("3_1tjgp")
initial_state = NodePath("NotActivated")

[node name="NotActivated" type="Node" parent="StateChart/Camera/Starting"]
script = ExtResource("4_2y2ge")

[node name="ToMap" type="Node" parent="StateChart/Camera/Starting/NotActivated"]
script = ExtResource("5_fmwaj")
to = NodePath("../../../Map")
event = &"activate_normal"
delay_in_seconds = "0.0"

[node name="ToZoomingOutFromLevel" type="Node" parent="StateChart/Camera/Starting/NotActivated"]
script = ExtResource("5_fmwaj")
to = NodePath("../../ZoomingOutFromLevel")
event = &"activate_from_level"
delay_in_seconds = "0.0"

[node name="ZoomingOutFromLevel" type="Node" parent="StateChart/Camera/Starting"]
script = ExtResource("4_2y2ge")

[node name="ToMap" type="Node" parent="StateChart/Camera/Starting/ZoomingOutFromLevel"]
script = ExtResource("5_fmwaj")
to = NodePath("../../../Map")
delay_in_seconds = "zoom_duration"

[node name="Map" type="Node" parent="StateChart/Camera"]
script = ExtResource("3_1tjgp")
initial_state = NodePath("Scrolling")

[node name="Scrolling" type="Node" parent="StateChart/Camera/Map"]
script = ExtResource("4_2y2ge")

[node name="ToZoomingIn" type="Node" parent="StateChart/Camera/Map/Scrolling"]
script = ExtResource("5_fmwaj")
to = NodePath("../../ZoomingIn")
event = &"zoom_in"
delay_in_seconds = "0.0"

[node name="ToZoomingOut" type="Node" parent="StateChart/Camera/Map/Scrolling"]
script = ExtResource("5_fmwaj")
to = NodePath("../../ZoomingOut")
event = &"zoom_out"
delay_in_seconds = "0.0"

[node name="ZoomingIn" type="Node" parent="StateChart/Camera/Map"]
script = ExtResource("4_2y2ge")

[node name="ToNode" type="Node" parent="StateChart/Camera/Map/ZoomingIn"]
script = ExtResource("5_fmwaj")
to = NodePath("../../../Node")
delay_in_seconds = "zoom_duration"

[node name="ZoomingOut" type="Node" parent="StateChart/Camera/Map"]
script = ExtResource("4_2y2ge")

[node name="ToNode" type="Node" parent="StateChart/Camera/Map/ZoomingOut"]
script = ExtResource("5_fmwaj")
to = NodePath("../../../Node")
delay_in_seconds = "zoom_duration"

[node name="Node" type="Node" parent="StateChart/Camera"]
script = ExtResource("3_1tjgp")
initial_state = NodePath("Viewing")

[node name="Viewing" type="Node" parent="StateChart/Camera/Node"]
script = ExtResource("4_2y2ge")

[node name="InToMap" type="Node" parent="StateChart/Camera/Node/Viewing"]
script = ExtResource("5_fmwaj")
to = NodePath("../../ZoomingInToMap")
event = &"zoom_in_to_map"
delay_in_seconds = "0.0"

[node name="InToLevel" type="Node" parent="StateChart/Camera/Node/Viewing"]
script = ExtResource("5_fmwaj")
to = NodePath("../../ZoomingInToLevel")
event = &"zoom_in_to_level"
delay_in_seconds = "0.0"

[node name="ToZoomingOut" type="Node" parent="StateChart/Camera/Node/Viewing"]
script = ExtResource("5_fmwaj")
to = NodePath("../../ZoomingOut")
event = &"zoom_out"
delay_in_seconds = "0.0"

[node name="ZoomingInToMap" type="Node" parent="StateChart/Camera/Node"]
script = ExtResource("4_2y2ge")

[node name="ToMap" type="Node" parent="StateChart/Camera/Node/ZoomingInToMap"]
script = ExtResource("5_fmwaj")
to = NodePath("../../../Map")
delay_in_seconds = "zoom_duration"

[node name="ZoomingInToLevel" type="Node" parent="StateChart/Camera/Node"]
script = ExtResource("4_2y2ge")

[node name="ZoomingOut" type="Node" parent="StateChart/Camera/Node"]
script = ExtResource("4_2y2ge")

[node name="ToMap" type="Node" parent="StateChart/Camera/Node/ZoomingOut"]
script = ExtResource("5_fmwaj")
to = NodePath("../../../Map")
delay_in_seconds = "zoom_duration"

[node name="OverlayLayer" type="CanvasLayer" parent="."]

[node name="Overlay" type="Control" parent="OverlayLayer"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("1_y5cmv")
script = ExtResource("12_1xipj")

[node name="StateChart" type="Node" parent="OverlayLayer/Overlay"]
script = ExtResource("2_gkkbi")
metadata/_custom_type_script = "uid://couw105c3bde4"

[node name="States" type="Node" parent="OverlayLayer/Overlay/StateChart"]
script = ExtResource("8_4va4l")

[node name="Gui" type="Node" parent="OverlayLayer/Overlay/StateChart/States"]
script = ExtResource("3_1tjgp")
initial_state = NodePath("Normal")

[node name="Normal" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui"]
script = ExtResource("4_2y2ge")

[node name="ToOpening" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui/Normal"]
script = ExtResource("5_fmwaj")
to = NodePath("../../Opening")
event = &"open"
delay_in_seconds = "0.0"

[node name="Opening" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui"]
script = ExtResource("4_2y2ge")

[node name="ToModal" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui/Opening"]
script = ExtResource("5_fmwaj")
to = NodePath("../../Modal")
delay_in_seconds = "slide_duration"

[node name="ToClosing" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui/Opening"]
script = ExtResource("5_fmwaj")
to = NodePath("../../Closing")
event = &"close"
delay_in_seconds = "0.0"

[node name="Modal" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui"]
script = ExtResource("4_2y2ge")

[node name="ToClosing" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui/Modal"]
script = ExtResource("5_fmwaj")
to = NodePath("../../Closing")
event = &"close"
delay_in_seconds = "0.0"

[node name="Closing" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui"]
script = ExtResource("4_2y2ge")

[node name="ToNormal" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Gui/Closing"]
script = ExtResource("5_fmwaj")
to = NodePath("../../Normal")
delay_in_seconds = "slide_duration"

[node name="Modal" type="Node" parent="OverlayLayer/Overlay/StateChart/States"]
script = ExtResource("3_1tjgp")
initial_state = NodePath("None")

[node name="None" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Modal"]
script = ExtResource("4_2y2ge")

[node name="ToSystem" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Modal/None"]
script = ExtResource("5_fmwaj")
to = NodePath("../../System")
event = &"open_system_modal"
delay_in_seconds = "0.0"

[node name="System" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Modal"]
script = ExtResource("4_2y2ge")

[node name="ToNone" type="Node" parent="OverlayLayer/Overlay/StateChart/States/Modal/System"]
script = ExtResource("5_fmwaj")
to = NodePath("../../None")
event = &"close"
delay_in_seconds = "0.0"

[node name="BackButton" type="Button" parent="OverlayLayer/Overlay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(250, 50)
layout_mode = 1
offset_right = 130.0
offset_bottom = 50.0
text = "Topic"
icon = ExtResource("12_nortw")
clip_text = true
expand_icon = true

[node name="TitlePanel" type="PanelContainer" parent="OverlayLayer/Overlay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(240, 40)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -120.0
offset_right = 120.0
offset_bottom = 40.0
grow_horizontal = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="OverlayLayer/Overlay/TitlePanel"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
text = "Topic"
label_settings = ExtResource("16_x8a3b")
horizontal_alignment = 1
vertical_alignment = 1
clip_text = true

[node name="SystemButton" type="Button" parent="OverlayLayer/Overlay"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
tooltip_text = "Menu"
icon = ExtResource("13_6jxcg")
icon_alignment = 1
expand_icon = true

[node name="ModalBarrier" type="ColorRect" parent="OverlayLayer/Overlay"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25, 0.25, 0.25, 0.501961)

[node name="SystemPanel" type="PanelContainer" parent="OverlayLayer/Overlay"]
unique_name_in_owner = true
process_mode = 3
visible = false
custom_minimum_size = Vector2(250, 300)
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = -300.0
offset_right = -50.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("17_yooek")

[node name="VBoxContainer" type="VBoxContainer" parent="OverlayLayer/Overlay/SystemPanel"]
layout_mode = 2

[node name="Label" type="Label" parent="OverlayLayer/Overlay/SystemPanel/VBoxContainer"]
layout_mode = 2
text = "Menu"
horizontal_alignment = 1

[node name="SettingsButton" type="Button" parent="OverlayLayer/Overlay/SystemPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 0
disabled = true
text = "Settings"
icon = ExtResource("14_54uqb")
expand_icon = true

[node name="ExitButton" type="Button" parent="OverlayLayer/Overlay/SystemPanel/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_vertical = 10
text = "Main Menu"
icon = ExtResource("15_fdq5g")
expand_icon = true

[node name="TopicMapContainer1" parent="." instance=ExtResource("13_nortw")]
unique_name_in_owner = true

[node name="TopicMapContainer2" parent="." instance=ExtResource("13_nortw")]
unique_name_in_owner = true

[node name="TopicMapContainer3" parent="." instance=ExtResource("13_nortw")]
unique_name_in_owner = true

[connection signal="state_entered" from="StateChart/Camera/Starting/ZoomingOutFromLevel" to="." method="_on_zooming_out_from_level_state_entered"]
[connection signal="state_exited" from="StateChart/Camera/Starting/ZoomingOutFromLevel" to="." method="_on_zooming_out_from_level_state_exited"]
[connection signal="state_entered" from="StateChart/Camera/Map/Scrolling" to="." method="_on_map_scrolling_state_entered"]
[connection signal="state_exited" from="StateChart/Camera/Map/Scrolling" to="." method="_on_map_scrolling_state_exited"]
[connection signal="state_entered" from="StateChart/Camera/Map/ZoomingIn" to="." method="_on_map_zooming_in_state_entered"]
[connection signal="state_entered" from="StateChart/Camera/Map/ZoomingOut" to="." method="_on_map_zooming_out_state_entered"]
[connection signal="state_entered" from="StateChart/Camera/Node/Viewing" to="." method="_on_node_viewing_state_entered"]
[connection signal="state_exited" from="StateChart/Camera/Node/Viewing" to="." method="_on_node_viewing_state_exited"]
[connection signal="state_unhandled_input" from="StateChart/Camera/Node/Viewing" to="." method="_on_node_viewing_state_unhandled_input"]
[connection signal="state_entered" from="StateChart/Camera/Node/ZoomingInToMap" to="." method="_on_node_zooming_in_to_map_state_entered"]
[connection signal="state_exited" from="StateChart/Camera/Node/ZoomingInToMap" to="." method="_on_node_zooming_in_to_map_state_exited"]
[connection signal="state_entered" from="StateChart/Camera/Node/ZoomingInToLevel" to="." method="_on_node_zooming_in_to_level_state_entered"]
[connection signal="state_entered" from="StateChart/Camera/Node/ZoomingOut" to="." method="_on_node_zooming_out_state_entered"]
[connection signal="state_exited" from="StateChart/Camera/Node/ZoomingOut" to="." method="_on_node_zooming_out_state_exited"]
[connection signal="state_entered" from="OverlayLayer/Overlay/StateChart/States/Gui/Normal" to="OverlayLayer/Overlay" method="_on_gui_normal_state_entered"]
[connection signal="state_exited" from="OverlayLayer/Overlay/StateChart/States/Gui/Normal" to="OverlayLayer/Overlay" method="_on_gui_normal_state_exited"]
[connection signal="state_entered" from="OverlayLayer/Overlay/StateChart/States/Gui/Opening" to="OverlayLayer/Overlay" method="_on_gui_opening_state_entered"]
[connection signal="state_entered" from="OverlayLayer/Overlay/StateChart/States/Gui/Closing" to="OverlayLayer/Overlay" method="_on_gui_closing_state_entered"]
[connection signal="state_entered" from="OverlayLayer/Overlay/StateChart/States/Modal/System" to="OverlayLayer/Overlay" method="_on_modal_system_state_entered"]
[connection signal="state_exited" from="OverlayLayer/Overlay/StateChart/States/Modal/System" to="OverlayLayer/Overlay" method="_on_modal_system_state_exited"]
